# firewatch-ci

./: .dvcignore  .pre-commit-config.yaml  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: drift_report.yml  model_promotion.yml  train_and_deploy.yml
dashboard/: app.py
data/: dataset.yaml  raw.dvc  stats.json  validate_report.json
data/augmented/train/labels/: AoF00001_aug1.txt  AoF00002_aug0.txt
data/sample/: dataset.yaml
data/sample/train/: labels.cache
data/sample/train/labels/: AoF04181.txt  AoF04212.txt  AoF04246.txt  AoF04298.txt  AoF04366.txt  AoF04381.txt  AoF04387.txt  AoF04403.txt  AoF04457.txt  AoF04548.txt  AoF04572.txt  AoF04642.txt  AoF04648.txt  AoF04886.txt  AoF04888.txt  AoF04923.txt  AoF05246.txt  AoF05285.txt  AoF05291.txt  AoF05331.txt  AoF05348.txt  AoF05390.txt  AoF05488.txt  AoF05556.txt  AoF05558.txt  AoF05562.txt  AoF05782.txt  AoF05852.txt  AoF06270.txt  (+69 more)
data/sample/val/: labels.cache
docs/: ci_cd_test_notes.md
logs/: inference_log.csv  reference_log.csv  webhook_alerts.csv
metrics/: eval_results.json  smoke_eval.json  smoke_results.json  train_results.json
models/smoke_weights/train/: args.yaml  results.csv
reports/: .gitkeep  drift_report.html
scripts/: create_sample.py
service/: bentofile.yaml  service.py
src/: augment.py  batch_inference.py  compare_models.py  evaluate.py  import_to_bento.py  preprocess.py  register_model.py  train.py  validate_data.py  yolo_mlflow_wrapper.py
src/monitoring/: drift_report.py
tests/: test_evaluate.py  test_preprocessing.py  test_service.py
(+25 files in other folders)
